Upload external files

--- a/orchestrator/appsettings.json
+++ b/orchestrator/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "CloudStorageOptions": {
+    "ServiceUrl": null,
+    "AccessKey": null,
+    "SecretKey": null,
+    "UploadBucket":  null
+  },
   "ValidTokens": [
     "wBwmoQFpp592A0pSoYkb"
   ]
