Orchestrate using hangfire

--- a/orchestrator/appsettings.Development.json
+++ b/orchestrator/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "JobStorage": "temp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "CloudStorageOptions": {
+    "ServiceUrl": "http://localhost:9000",
+    "AccessKey": "key",
+    "SecretKey": "secret",
+    "UploadBucket": "civitai-model-scanner-tests"
   }
 }
