--- a/orchestrator/appsettings.json
+++ b/orchestrator/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "LocalStorageOptions": {
+    "TempFolder": "./temp/"
+  },
   "CloudStorageOptions": {
     "ServiceUrl": null,
     "AccessKey": null,
