--- a/orchestrator/appsettings.Development.json
+++ b/orchestrator/appsettings.Development.json
@@ -13,5 +13,8 @@
     "AccessKey": "key",
     "SecretKey": "secret",
     "UploadBucket": "civitai-model-scanner-tests"
+  },
+  "LocalStorageOptions": {
+    "AlwaysInvalidate": false
   }
 }
