--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   orchestrator:
     image: civitai-model-scanner-orchestrator
     build:
-      context: ./orchestrator/
+      context: ./orchestrator/ModelScanner/
       dockerfile: Dockerfile
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
