Added named volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,15 @@ services:
     build:
       context: ./orchestrator/ModelScanner/
       dockerfile: Dockerfile
+    restart: always
+    environment:
+      - "ConnectionStrings:JobStorage=/data/jobs.db"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
+      - db:/data/
     ports:
       - "80:80"
     depends_on:
       - model-scanner
+volumes:
+  db:
