Revert "remove sqlite from docker compose"
This reverts commit 91601a8951766d107f45b3212614a5dcaae0a294.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       context: ./orchestrator/ModelScanner/
       dockerfile: Dockerfile
     restart: always
+    environment:
+      - "ConnectionStrings:JobStorage=/data/jobs.db"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - db:/data/
