--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - "ConnectionStrings:JobStorage=/data/jobs.db"
+      - "ConnectionStrings:JobStorage=/data/new-jobs.db"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - db:/data/
