make sure pytorch uses CPU

--- a/model-scanner/Dockerfile
+++ b/model-scanner/Dockerfile
@@ -5,6 +5,6 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && \
     freshclam && \
     apt-get install -y python3 python3-pip && \
     pip3 install picklescan && \
-    pip3 install safetensors torch torchsde==0.2.5 
+    pip3 install 'numpy<2' safetensors torch torchsde==0.2.5 --extra-index-url https://download.pytorch.org/whl/cpu
 
 COPY scripts/ /convert/
