--- a/orchestrator/ModelScanner/Dockerfile
+++ b/orchestrator/ModelScanner/Dockerfile
@@ -1,29 +1,28 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-noble-chiseled-extra AS base
-USER $APP_UID
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER root
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+RUN apt-get update && \
+    apt-get -qy full-upgrade && \
+    apt-get install -qy curl bash ca-certificates gnupg && \
+    curl -sSL https://get.docker.com/ | sh
 
-# This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:8.0-noble AS build
-ARG BUILD_CONFIGURATION=Release
+WORKDIR /app
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["ModelScanner/ModelScanner.csproj", "ModelScanner/"]
-RUN dotnet restore "./ModelScanner/ModelScanner.csproj"
+COPY ["ModelScanner.csproj", "."]
+RUN dotnet restore "./ModelScanner.csproj"
 COPY . .
-WORKDIR "/src/ModelScanner"
-RUN dotnet build "./ModelScanner.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/."
+RUN dotnet build "ModelScanner.csproj" -c Release -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./ModelScanner.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "ModelScanner.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
